--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security.oauth.boot</groupId>
+      <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+      <version>2.2.0.RELEASE</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
